--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "dependencies": {},
   "devDependencies": {
     "css-loader": "^4.3.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-webpack-plugin": "^2.1.0",
     "file-loader": "^6.1.1",
     "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.5.0",
@@ -41,5 +45,11 @@
       "not dead",
       "not op_mini all"
     ]
+  },
+  "eslintConfig":{
+    "extends": "airbnb-base",
+    "rules":{
+      "quotes": [1,"double"]
+    }
   }
 }
