--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "postcss-loader": "^4.0.4",
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^2.0.0",
+    "thread-loader": "^3.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "workbox-webpack-plugin": "^5.1.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
