--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "thread-loader": "^3.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "workbox-webpack-plugin": "^5.1.4"
@@ -64,7 +65,7 @@
       ]
     },
     "parserOptions": {
-      "ecmaVersion": 6,
+      "ecmaVersion": 8,
       "sourceType": "module"
     }
   },
